sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:11: error: not found: value n
  }} while (n!=0 || m!=0)
            ^AlgCocktailSort1:11: error: not found: value m
  }} while (n!=0 || m!=0)
                    ^