sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  do {
    var n=0
    var m=0
  for (i <- 0 to getValueCount() - 2) {
    if (isSmaller(i+1,i)) {swap(i,i+1); n=1}
  }
  for (i <- getValueCount()-2 to 0 by -1) {
    if (isSmaller(i,i-1)) {swap(i,i-1); m=1}
  }} while (n!=0 || m!=0)
}